# QueryWeather

./: .gitignore  Dockerfile  LICENSE  README copy.md  README.md  cleanup_db.py  docker-compose.yml  env.example  pyproject.toml  requirements.txt  run_local.py  setup_env.py  weather_data.db  weather_data.db.wal  weather_data_1.db
.github/workflows/: ingest-weather-data.yml  test.yml
app/: main.py  models.py
app/api/: routes.py
app/core/: config.py
app/db/: duck_db_utils.py  model.py
app/web/: streamlit_dashboard.py
data/: debug_data.py  dublin_last_5_days_hourly_with_station_new.csv  generate_synthetic_weather copy.py  generate_synthetic_weather.py  ireland_weather_cur_3_months.csv
ingestion/: ingest_openweather.py
scripts/: debug_current_weather.py  init_db.py  run_local.py  wttr_in_live.py
src/api/: 5Days copy.py  5Days.py  Current_Weather.py  completeDuckDB.py  completeWeatherAPI.py  data.py  main.py  test_duckdb.py  test_openweather.py  test_weatherapp.py
temp/: dublin_5_day_forecast.csv  dublin_current_weather.csv  dublin_last_5_days_hourly.csv  duck_db_utils_1.py  owm_station_log.csv  routes_1.py  test_api_diff.py
tests/: test_api.py  test_duckdb_utils.py  test_weather_api.py  tests_weather_api.py  weather_data.db
tests/data/: test_weather.csv
uinterface/: streamlit_dashboard.py  streamlit_dashboard_old.py
utils/: logger_service.py
